--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
@@ -8,7 +8,7 @@
             {{ _('NOTE:Your dataset will be private until approved by a system administrator. However, you can see your newly submitted datasets in your Dashboard.') }}
         </span>
     {% endif %}
-{{ form.input('title', id='field-title', label=_('Title'), placeholder=_('eg. A descriptive title'), value=data.title, error=errors.title, classes=['control-full', 'control-large'], attrs={'data-module': 'slug-preview-target', 'title': 'A title given to the resource (e.g., Water quality data collectied in red Butte Creek, Utah, USA as part of the iUTAH GAMUT network.'}) }}
+{{ form.input('title', id='field-title', label=_('Title'), placeholder=_('eg. Red Butte Creek GAMUT Water Temperature Data.'), value=data.title, error=errors.title, classes=['control-full', 'control-large'], attrs={'data-module': 'slug-preview-target', 'title': 'A name to idenitfy the dataset.'}) }}
 {% endblock %}
 
 {% block package_basic_fields_url %}
@@ -26,11 +26,11 @@
 {% endblock %}
 
 {% block package_basic_fields_description %}
-{{ form.markdown('notes', id='field-notes', label=_('* Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes, attrs={'title' : 'A short description (or abstract) for the resource.'}) }}
+{{ form.markdown('notes', id='field-notes', label=_('* Description'), placeholder=_('eg. A short description (or abstract) for the dataset.'), value=data.notes, error=errors.notes, attrs={'title' : 'A short description (or abstract) for the dataset.'}) }}
 {% endblock package_basic_fields_description%}
 
 {% block package_basic_fields_tags %}
-    {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?', 'title':'Keyword(s) that describe the resource (e.g., water, temperature, Red Butte Creek).'} %}
+    {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?', 'title':'Keyword(s) that describe the dataset.'} %}
 
     {%  if errors.tag_string %}
         {% set tag_data = '' %}
@@ -38,7 +38,7 @@
         {% set tag_data = data.tag_string %}
     {% endif %}
 
-    {{ form.input('tag_string', id='field-tags', label=_('* Keywords'), placeholder=_('eg. water, temperature, Little Bear River'), value=tag_data, error=errors.tag_string, classes=['control-full'], attrs=tag_attrs) }}
+    {{ form.input('tag_string', id='field-tags', label=_('* Keywords'), placeholder=_('eg. water quality, temperature, Red Butte Creek, time series'), value=tag_data, error=errors.tag_string, classes=['control-full'], attrs=tag_attrs) }}
 {% endblock package_basic_fields_tags %}
 
 
