--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_form.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_form.html
@@ -9,11 +9,11 @@
   {% endblock %}
 
 {% block basic_fields_url %}
-    {{ form.input('url', id='field-url', label=_('Resource'), placeholder=_('e.g., http://gis.utah.gov/data/planning/water-related-land/RB_ARBR_AAWaterTemp_EXO2013.csv'), value=data.url, error=errors.url, classes=['control-full', 'control-large'], attrs={'title': 'The url of the resource.'}) }}
+    {{ form.input('url', id='field-url', label=_('Resource'), placeholder=_('e.g., http://gis.utah.gov/data/planning/water-related-land/'), value=data.url, error=errors.url, classes=['control-full', 'control-large'], attrs={'title': 'The url of the resource.'}) }}
 {% endblock %}
 
 {% block basic_fields_name %}
-        {{ form.input('name', id='field-name', label=_('*Name'), placeholder=_('e.g., Water temperature in Red Butte Creek above Red Butte Creek Reservoir for 2013'), value=data.name, error=errors.name, classes=['control-full'], attrs={'title': 'A name to identify the resource.'}) }}
+        {{ form.input('name', id='field-name', label=_('*Name'), placeholder=_('e.g., Shapefile of water related land use in Utah distributed by the Utah AGRC.'), value=data.name, error=errors.name, classes=['control-full'], attrs={'title': 'A name to identify the resource.'}) }}
         <span class="info-block info-block-small" style="margin-left: 100px" >
           <i class="icon-info-sign" ></i>
           {{ _('Name for the resource is required if a resource has been provided.') }}
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block basic_fields_description %}
-    {{ form.markdown('description', id='field-description', label=_('Description'), placeholder=_('e.g., The csv file contains water temperature observations collected in Red Butte Creek above Red Butte Reservoir. Data are limited to 2013.'), value=data.description, error=errors.description, attrs={'title': 'A short decsription (or abstarct) for the resource.'}) }}
+    {{ form.markdown('description', id='field-description', label=_('Description'), placeholder=_('e.g., Water usage-related polygon map data, published annually by the Utah Division of Water Resources depicting irrigated crops, phreatophytes, wet/open water areas, dry land agriculture, and residential/industrial areas.'), value=data.description, error=errors.description, attrs={'title': 'A short decsription (or abstarct) for the resource.'}) }}
 {% endblock %}
 
 {% block basic_fields_format %}
