--- a/src/ckanext-mdftemplate/fanstatic/mdftemplate_mdfstyle.css
+++ b/src/ckanext-mdftemplate/fanstatic/mdftemplate_mdfstyle.css
@@ -253,18 +253,12 @@ table {
     width: 100%;
     text-align: left;
     border-collapse: collapse;
-    border: 1px solid #69c;
 }
 
 th {
-    padding: 7px 25px;
-    font-weight: normal;
+    padding: 7px 11px;
+    font-weight: bold;
     font-size: 14px;
-    color: #039;
-}
-
-tbody {
-    background: #e8edff;
 }
 
 td {
@@ -273,9 +267,22 @@ td {
     border-top: 1px dashed #fff;
 }
 
-tbody tr:hover td {
-    color: #339;
-    background: #d0dafd;
+
+.citation-block {
+	padding-top: 20px;
+}
+
+.citation-label {
+	font-weight: bold;
+	color: #444;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif !important;
+}
+
+.citation-text {
+	display: inline-block;
+	width: 90%;
+	float: right;
+	margin-bottom: 30px;
 }
 
 /*
@@ -776,6 +783,11 @@ px solid #222
   background: none;
 }
 
+div.panel-tabs li a {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
 .separator {
   width: 100%;
   height: 0;
@@ -785,7 +797,7 @@ px solid #222
 }
 
 table {
-  margin: 10px 0 30px 0;
+    border: 1px dotted #fff;
 }
 
 table tr th, table tr td {
