Changed "eg." to "e.g.," on the home page (search data box)

--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/home/index.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/home/index.html
@@ -44,7 +44,7 @@
           <form class="module-content search-form" method="get" action="{% url_for controller='package', action='search' %}" style="margin-bottom: -15px" >
             <h3 class="heading" style="color: white">{{ _("Search Your Data") }} </h3>
             <div class="search-input control-group search-giant" >
-              <input type="text" class="search" name="q" value="{{ c.q }}" autocomplete="off" placeholder="{{ _('eg. time series') }}" style="margin-bottom: 10px"/>
+              <input type="text" class="search" name="q" value="{{ c.q }}" autocomplete="off" placeholder="{{ _('e.g., time series') }}" style="margin-bottom: 10px"/>
               <button type="submit">
                 <i class="icon-search"></i>
                 <span>{{ _('Search') }}</span>
