Fix to issue#82 as well as fix to checkbox alignment problem on the user registration form.

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
@@ -18,7 +18,7 @@
     {% if not c.user  and pkg.resources %}
         <div class="form-group">
             <div class="checkbox">
-                  <input type="checkbox" id="chkDataUseAgreement"> <small><strong>Agree to data use agreement for data preview/download.</strong></small>
+                  <input type="checkbox" id="chkDataUseAgreement" style="margin-top: 15px"> <small><strong>Agree to data use agreement for data preview/download.</strong></small>
             </div>
         </div>
     {% endif %}
