--- a/src/ckanext-Metadata/ckanext/Metadata/templates/user/new_user_form.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/user/new_user_form.html
@@ -14,10 +14,10 @@
   <input id="field-error" type="hidden" value="{{ error_summary }}">
 
     <div class="checkbox">
-          <input type="checkbox" id="chkDataPublishAgreement" style="margin-left: 110px; padding: 50px"><strong>Agree to data publisher's agreement.</strong>
+          <input type="checkbox" id="chkDataPublishAgreement" style="margin-left: 110px; padding: 50px; margin-top: -5px"><strong>Agree to data publisher's agreement.</strong>
     </div>
     <div class="checkbox">
-          <input type="checkbox" id="chkDataUseAgreement" style="margin-left: 110px"><strong>Agree to data use agreement.</strong>
+          <input type="checkbox" id="chkDataUseAgreement" style="margin-left: 110px; margin-top: -5px"><strong>Agree to data use agreement.</strong>
     </div>
 
     <span class="info-block" style="margin-left: 0px">
